--- a/ProbaDingue.fsproj
+++ b/ProbaDingue.fsproj
@@ -17,7 +17,7 @@
     <Compile Include="Models\Graph.fs" />
     <Compile Include="Models\Nodes.fs" />
     <Compile Include="Models\Models.fs" />
-    <Compile Include="Models\DrawModel.fs" />
+    <Compile Include="Models\DrawStructure.fs" />
     <Compile Include="Backtester\BacktesterTypes.fs" />
     <Compile Include="Backtester\DataHandling.fs" />
     <Compile Include="Backtester\Strategies.fs" />
