--- a/ProbaDingue.fsproj
+++ b/ProbaDingue.fsproj
@@ -16,6 +16,7 @@
     <Compile Include="Models\ModelsTypes.fs" />
     <Compile Include="Models\Graph.fs" />
     <Compile Include="Models\Nodes.fs" />
+    <Compile Include="Models\Optimization.fs" />
     <Compile Include="Models\Models.fs" />
     <Compile Include="Models\DrawStructure.fs" />
     <Compile Include="Backtester\BacktesterTypes.fs" />
@@ -26,14 +27,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FSharp.Charting" Version="2.1.0" />
     <PackageReference Include="MathNet.Numerics" Version="4.15.0" />
     <PackageReference Include="MathNet.Numerics.FSharp" Version="4.15.0" />
     <PackageReference Include="System.Numerics.Vectors" Version="4.5.0" />
     <PackageReference Include="System.Runtime.Numerics" Version="4.3.0" />
-    <PackageReference Include="XPlot.GoogleCharts" Version="3.0.1" />
-    <PackageReference Include="XPlot.GoogleCharts.WPF" Version="1.3.0" />
-    <PackageReference Include="XPlot.Plotly" Version="4.0.3" />
-    <PackageReference Include="XPlot.Plotly.WPF" Version="1.3.0" />
   </ItemGroup>
 
   <ItemGroup>
