Refactor Graph TimeSeries management through use of Monads. Greatly simplify use of folding over a sequence of graph -e.g. sampling, conditional expectation, fitting, ...

--- a/ProbaDingue.fsproj
+++ b/ProbaDingue.fsproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Monad.fs" />
     <Compile Include="UtilitiesSIMD.fs" />
     <Compile Include="PSO_algorithm.fs" />
     <Compile Include="Utilities.fs" />
