--- a/ProbaDingue.fsproj
+++ b/ProbaDingue.fsproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net472</TargetFramework> 
@@ -15,6 +15,7 @@
     <Compile Include="PSO_algorithm.fs" />
     <Compile Include="Utilities.fs" />
     <Compile Include="Distributions.fs" />
+    <Compile Include="TimeSeries.fs" />
     <Compile Include="Models\ModelsTypes.fs" />
     <Compile Include="Models\Graph.fs" />
     <Compile Include="Models\Nodes.fs" />
