--- a/ProbaDingue.fsproj
+++ b/ProbaDingue.fsproj
@@ -18,6 +18,8 @@
     <Compile Include="TimeSeries.fs" />
     <Compile Include="Models\ModelsTypes.fs" />
     <Compile Include="Models\MonadicGraph.fs" />
+    <Compile Include="Models\GraphTimeSeries.fs" />
+	<!--
     <Compile Include="Models\Graph.fs" />
     <Compile Include="Models\Nodes.fs" />
     <Compile Include="Models\Optimization.fs" />
@@ -27,12 +29,14 @@
     <Compile Include="Backtester\DataHandling.fs" />
     <Compile Include="Backtester\Strategies.fs" />
     <Compile Include="Backtester\Backtester.fs" />
+	-->
     <Compile Include="Program.fs" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="FSharp.Charting" Version="2.1.0" />
     <PackageReference Include="FSharp.Data" Version="4.2.2" />
+    <PackageReference Include="FSharpPlus" Version="1.2.1" />
     <PackageReference Include="MathNet.Numerics" Version="4.15.0" />
     <PackageReference Include="MathNet.Numerics.FSharp" Version="4.15.0" />
     <PackageReference Include="System.Numerics.Vectors" Version="4.5.0" />
