Finished sampling of model with monads

--- a/ProbaDingue.fsproj
+++ b/ProbaDingue.fsproj
@@ -17,11 +17,12 @@
     <Compile Include="Distributions.fs" />
     <Compile Include="TimeSeries.fs" />
     <Compile Include="Models\ModelsTypes.fs" />
+    <Compile Include="Models\Nodes.fs" />
     <Compile Include="Models\MonadicGraph.fs" />
     <Compile Include="Models\GraphTimeSeries.fs" />
 	<!--
     <Compile Include="Models\Graph.fs" />
-    <Compile Include="Models\Nodes.fs" />
+    <Compile Include="Models\NodesOld.fs" />
     <Compile Include="Models\Optimization.fs" />
     <Compile Include="Models\Models.fs" />
     <Compile Include="Models\DrawStructure.fs" />
