--- a/ProbaDingue.fsproj
+++ b/ProbaDingue.fsproj
@@ -18,14 +18,14 @@
     <Compile Include="TimeSeries.fs" />
     <Compile Include="Models\ModelsTypes.fs" />
     <Compile Include="Models\Nodes.fs" />
-    <Compile Include="Models\MonadicGraph.fs" />
-    <Compile Include="Models\GraphTimeSeries.fs" />
-	<!--
     <Compile Include="Models\Graph.fs" />
+    <Compile Include="Models\GraphTimeSeries.fs" />
+    <Compile Include="Models\GraphOld.fs" />
     <Compile Include="Models\NodesOld.fs" />
-    <Compile Include="Models\Optimization.fs" />
-    <Compile Include="Models\Models.fs" />
-    <Compile Include="Models\DrawStructure.fs" />
+    <Compile Include="Models\OptimizationOld.fs" />
+    <Compile Include="Models\ModelsOld.fs" />
+    <!--
+	<Compile Include="Models\DrawStructure.fs" />
     <Compile Include="Backtester\BacktesterTypes.fs" />
     <Compile Include="Backtester\DataHandling.fs" />
     <Compile Include="Backtester\Strategies.fs" />
