--- a/ProbaDingue.fsproj
+++ b/ProbaDingue.fsproj
@@ -23,7 +23,7 @@
     <Compile Include="Models\Nodes.fs" />
     <Compile Include="Models\Graph.fs" />
     <Compile Include="Models\GraphTimeSeries.fs" />
-    <Compile Include="Models\Optimization.fs" />
+    <!--<Compile Include="Models\Optimization.fs" />-->
     <Compile Include="Models\SGD.fs" />
 	<Compile Include="Models\DrawStructure.fs" />
     <Compile Include="Backtester\BacktesterTypes.fs" />
