--- a/ProbaDingue.fsproj
+++ b/ProbaDingue.fsproj
@@ -9,7 +9,7 @@
 
 	<runtime>
 		<gcServer enabled="true" />
-		<gcConcurrent enabled="true"/>
+		<gcConcurrent enabled="true" />
 	</runtime>
   </PropertyGroup>
 
@@ -20,6 +20,7 @@
     <Compile Include="PSO_algorithm.fs" />
     <Compile Include="Utilities.fs" />
     <Compile Include="Distributions.fs" />
+	<Compile Include="Binance\Scraper.fs" />
     <Compile Include="TimeSeries\TimeSeries.fs" />
     <Compile Include="TimeSeries\Statistics.fs" />
     <Compile Include="TimeSeries\Transformations.fs" />
@@ -39,6 +40,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Binance.Net" Version="7.2.5" />
+    <PackageReference Include="CryptoExchange.Net" Version="4.2.8" />
     <PackageReference Include="FSharp.Charting" Version="2.1.0" />
     <PackageReference Include="FSharp.Data" Version="4.2.2" />
     <PackageReference Include="FSharpPlus" Version="1.2.1" />
