Begin implementation of wavelet smoothing

--- a/ProbaDingue.fsproj
+++ b/ProbaDingue.fsproj
@@ -26,7 +26,8 @@
 	<Compile Include="DataBase\DB.fs" />
     <Compile Include="TimeSeries\TimeSeries.fs" />
     <Compile Include="TimeSeries\Statistics.fs" />
-    <Compile Include="TimeSeries\Transformations.fs" />
+    <Compile Include="TimeSeries\Transformations\WaveletSmoothing.fs" />
+    <Compile Include="TimeSeries\Transformations\Transformations.fs" />
     <Compile Include="Models\ModelsTypes.fs" />
     <Compile Include="Models\Skeletons.fs" />
     <Compile Include="Models\Nodes.fs" />
