--- a/ProbaDingue.fsproj
+++ b/ProbaDingue.fsproj
@@ -44,6 +44,7 @@
 	<Compile Include="ComputationalGraph\Graph.fs" />
 	<Compile Include="ComputationalGraph\Node.fs" />
 	<Compile Include="ComputationalGraph\Model.fs" />
+	<Compile Include="TimeSeries.fs" />
 	<Compile Include="UnitTests\ComputationalGraphTest\GraphTest.fs" />
     <Compile Include="Main.fs" />
   </ItemGroup>
