Start implementation of 'TimeSeries'

--- a/ProbaDingue.fsproj
+++ b/ProbaDingue.fsproj
@@ -41,10 +41,12 @@
     <Compile Include="OldImplementation\Backtester\Strategies.fs" />
     <Compile Include="OldImplementation\Backtester\Backtester.fs" />
     <Compile Include="OldImplementation\Program.fs" />-->
+	<Compile Include="Utils.fs" />
 	<Compile Include="ComputationalGraph\Graph.fs" />
 	<Compile Include="ComputationalGraph\Node.fs" />
 	<Compile Include="ComputationalGraph\Model.fs" />
-	<Compile Include="TimeSeries.fs" />
+	<Compile Include="TimeSeries\TimeSeries.fs" />
+	<Compile Include="UnitTests\TimeSeriesTest\TimeSeriesTest.fs" />
 	<Compile Include="UnitTests\ComputationalGraphTest\GraphTest.fs" />
     <Compile Include="Main.fs" />
   </ItemGroup>
