--- a/ProbaDingue.fsproj
+++ b/ProbaDingue.fsproj
@@ -15,17 +15,24 @@
 
   <ItemGroup>
 	<Compile Include="Utils.fs" />
+	<Compile Include="ComputationalGraph\GraphType.fs" />
+	<Compile Include="ComputationalGraph\BasicInput.fs" />
+	<Compile Include="ComputationalGraph\StateGraph.fs" />
 	<Compile Include="ComputationalGraph\Graph.fs" />
 	<Compile Include="ComputationalGraph\Node.fs" />
 	<Compile Include="TimeSeries\Statistics.fs" />
 	<Compile Include="TimeSeries\TimeSeries.fs" />
 	<Compile Include="Model\Model.fs" />
+	<Compile Include="UnitTests\UtilsTest.fs" />
 	<Compile Include="UnitTests\TimeSeriesTest\StatisticsTest.fs" />
 	<Compile Include="UnitTests\TimeSeriesTest\TimeSeriesTest.fs" />
 	<Compile Include="UnitTests\ComputationalGraphTest\GraphTest.fs" />
 	<Compile Include="UnitTests\ComputationalGraphTest\NodeTest.fs" />
     <Compile Include="Main.fs" />
+    <None Include="MainScript.fsx" />
   </ItemGroup>
+
+  <ItemGroup />
 
   <ItemGroup>
     <PackageReference Include="Binance.Net" Version="7.2.5" />
