Gradient of Graph for given parameter and parameter group

--- a/ProbaDingue.fsproj
+++ b/ProbaDingue.fsproj
@@ -40,6 +40,7 @@
 	<Compile Include="TimeSeries\TimeseriesState.fs" />
 	<Compile Include="Model\ModelType.fs" />
 	<Compile Include="Model\ModelState.fs" />
+	<Compile Include="Model\Optimisation.fs" />
 	<Compile Include="Model\Model.fs" />
 	<Compile Include="UnitTests\UtilsTest.fs" />
 	<Compile Include="UnitTests\TimeSeriesTest\StatisticsTest.fs" />
