--- a/ProbaDingue.fsproj
+++ b/ProbaDingue.fsproj
@@ -29,6 +29,7 @@
 
   <ItemGroup>
 	<Compile Include="Utils.fs" />
+	<Compile Include="DataBase\Database.fs" />
 	<Compile Include="ComputationalGraph\GraphType.fs" />
 	<Compile Include="ComputationalGraph\BasicInput.fs" />
 	<Compile Include="ComputationalGraph\GraphState.fs" />
@@ -59,9 +60,9 @@
     <PackageReference Include="FSharpPlus" Version="1.2.2" />
     <PackageReference Include="MathNet.Numerics" Version="4.15.0" />
     <PackageReference Include="MathNet.Numerics.FSharp" Version="4.15.0" />
-    <PackageReference Include="SQLProvider" Version="1.2.10" />
+    <PackageReference Include="SQLProvider" Version="1.2.11" />
     <PackageReference Include="System.Core" Version="3.5.21022.801" />
-    <PackageReference Include="System.Data.OleDb" Version="5.0.0" />
+    <PackageReference Include="System.Data.OleDb" Version="6.0.0" />
     <PackageReference Include="System.Numerics.Vectors" Version="4.5.0" />
     <PackageReference Include="System.Runtime" Version="4.3.1" />
     <PackageReference Include="System.Runtime.Numerics" Version="4.3.0" />
