--- a/ProbaDingue.fsproj
+++ b/ProbaDingue.fsproj
@@ -40,6 +40,8 @@
 	<Compile Include="TimeSeries\Statistics.fs" />
 	<Compile Include="TimeSeries\TimeSeries.fs" />
 	<Compile Include="TimeSeries\TimeseriesState.fs" />
+	<Compile Include="TimeSeries\Transformations.fs" />
+	<Compile Include="TimeSeries\Plot.fs" />
 	<Compile Include="Model\ModelType.fs" />
 	<Compile Include="Model\ModelState.fs" />
 	<Compile Include="Model\Optimisation.fs" />
