Crossvalidation - Out-Of-Sample errors for given model and ts

--- a/ProbaDingue.fsproj
+++ b/ProbaDingue.fsproj
@@ -30,8 +30,8 @@
   <ItemGroup>
 	<Content Include="ToDo.txt" />
 	<Compile Include="Utils.fs" />
-	<Compile Include="DataBase\Utils.fs" />
-	<Compile Include="DataBase\Database.fs" />
+	<!--<Compile Include="DataBase\Utils.fs" />
+	<Compile Include="DataBase\Database.fs" />-->
 	<Compile Include="ComputationalGraph\GraphType.fs" />
 	<Compile Include="ComputationalGraph\BasicInput.fs" />
 	<Compile Include="ComputationalGraph\GraphState.fs" />
