--- a/ProbaDingue.fsproj
+++ b/ProbaDingue.fsproj
@@ -47,6 +47,9 @@
 	<Compile Include="Model\Optimisation.fs" />
 	<Compile Include="Model\Model.fs" />
 	<Compile Include="Model\Model_Selection\CrossValidation.fs" />
+	<Compile Include="Trading\TradingTypes.fs" />
+	<Compile Include="Trading\OpenStrategy.fs" />
+	<Compile Include="Trading\CloseStrategy.fs" />
 	<Compile Include="UnitTests\UtilsTest.fs" />
 	<Compile Include="UnitTests\TimeSeriesTest\StatisticsTest.fs" />
 	<Compile Include="UnitTests\TimeSeriesTest\TimeSeriesTest.fs" />
