Reorganization of files - clear separation between types and their associated methods

--- a/ProbaDingue.fsproj
+++ b/ProbaDingue.fsproj
@@ -44,6 +44,7 @@
 	<Compile Include="TimeSeries\Transformations.fs" />
 	<Compile Include="TimeSeries\Plot.fs" />
 	<Compile Include="Model\ModelType.fs" />
+	<Compile Include="Model\DGP.fs" />
 	<Compile Include="Model\ModelState.fs" />
 	<Compile Include="Model\Optimisation.fs" />
 	<Compile Include="Model\Model.fs" />
