--- a/ProbaDingue.fsproj
+++ b/ProbaDingue.fsproj
@@ -53,11 +53,11 @@
 	<Compile Include="Trading\TradingTypes.fs" />
 	<Compile Include="Trading\OpenStrategy.fs" />
 	<Compile Include="Trading\CloseStrategy.fs" />
-	<!--<Compile Include="UnitTests\UtilsTest.fs" />
+	  <!--<Compile Include="UnitTests\UtilsTest.fs" />
 	<Compile Include="UnitTests\TimeSeriesTest\StatisticsTest.fs" />
-	<Compile Include="UnitTests\TimeSeriesTest\TimeSeriesTest.fs" />
+	<Compile Include="UnitTests\TimeSeriesTest\TimeSeriesTest.fs" />-->
 	<Compile Include="UnitTests\ComputationalGraphTest\GraphTest.fs" />
-	<Compile Include="UnitTests\ComputationalGraphTest\NodeTest.fs" />-->
+	<Compile Include="UnitTests\ComputationalGraphTest\NodeTest.fs" />
     <Compile Include="Main.fs" />
     <None Include="MainScript.fsx" />
   </ItemGroup>
