--- a/ProbaDingue.fsproj
+++ b/ProbaDingue.fsproj
@@ -53,15 +53,16 @@
 	<Compile Include="Trading\TradingTypes.fs" />
 	<Compile Include="Trading\OpenStrategy.fs" />
 	<Compile Include="Trading\CloseStrategy.fs" />
+	<Compile Include="UnitTests\Utils\Array2D.fs" />
+	<Compile Include="UnitTests\ComputationalGraph\Graph.fs" />
+	<Compile Include="UnitTests\ComputationalGraph\Node.fs" />
 	<Compile Include="UnitTests\ComputationalGraph\Simplify\Polynomial.fs" />
 	<Compile Include="UnitTests\ComputationalGraph\Simplify\Addition.fs" />
 	<Compile Include="UnitTests\ComputationalGraph\Simplify\Substraction.fs" />
 	<Compile Include="UnitTests\ComputationalGraph\Simplify\Multiplication.fs" />
-	  <!--<Compile Include="UnitTests\UtilsTest.fs" />
+	<Compile Include="UnitTests\TimeSeriesTest\TimeSeriesTest.fs" />
 	<Compile Include="UnitTests\TimeSeriesTest\StatisticsTest.fs" />
-	<Compile Include="UnitTests\TimeSeriesTest\TimeSeriesTest.fs" />-->
-	<Compile Include="UnitTests\ComputationalGraph\Graph.fs" />
-	<Compile Include="UnitTests\ComputationalGraph\Node.fs" />
+	<Compile Include="UnitTests\ComputationalGraph\Gradient.fs" />
     <Compile Include="Main.fs" />
     <None Include="MainScript.fsx" />
   </ItemGroup>
@@ -93,9 +94,5 @@
 
   <ItemGroup>
     <PackageReference Update="FSharp.Core" Version="6.0.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="UnitTests\ComputationalGraph\Gradient\" />
   </ItemGroup>
 </Project>
