--- a/ProbaDingue.fsproj
+++ b/ProbaDingue.fsproj
@@ -61,7 +61,7 @@
 	<Compile Include="UnitTests\ComputationalGraph\Simplify\Substraction.fs" />
 	<Compile Include="UnitTests\ComputationalGraph\Simplify\Multiplication.fs" />
 	<Compile Include="UnitTests\TimeSeriesTest\TimeSeriesTest.fs" />
-	<Compile Include="UnitTests\TimeSeriesTest\StatisticsTest.fs" />
+	<!--<Compile Include="UnitTests\TimeSeriesTest\StatisticsTest.fs" />-->
 	<Compile Include="UnitTests\ComputationalGraph\Gradient.fs" />
     <Compile Include="Main.fs" />
     <None Include="MainScript.fsx" />
